tests/rules/samples/check_preprocessor_indent_2.c
#endif
#else
#endif
#else
#endif
#endif
#endif
#else
#else
#endif
// Ok
#if 1
#endif
// END Ok
#else
#endif
